--- a/home.html
+++ b/home.html
@@ -9,6 +9,10 @@
     <H1> WELCOME TO QUIZZEO</H1>
 </head>
 <body>
-    
+    <div class="test"></div>    
+    <div class="test"></div>    
+    <div class="test"></div>    
+    <div class="test"></div>    
+    <div class="test"></div>    
 </body>
 </html>
