--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
             <h2> CATEGORIE :</h2>
             <button class=" sport">
 
-                <a href=>Sport</a>
+                <a href="quizz.html">Sport</a>
                 
             </button>
             <button class="music">
