--- a/quizz.html
+++ b/quizz.html
@@ -16,7 +16,7 @@
     
     <div class="container">
         <div class="box">
-            <h2> CATEGORIE :</h2>
+            <h2> SOUS CATEGORIE :</h2>
             <button class = basket>
 
                 <a href=>Basket</a>
