--- a/home.html
+++ b/home.html
@@ -22,13 +22,15 @@
         <input class="searchBar" type="search">
     </div>
     
-    <h2>Catégories</h2>
     <div class="page">
-        <div class="categories"></div>
-        <div class="categories"></div>
-        <div class="categories"></div>
-        <div class="categories"></div>
-        <div class="categories"></div>
+        <h2>Catégories</h2>
+        <div class="categories">
+            <div class="imgCategorie"></div>
+            <div class="textCategorie">
+                <h3>Titre</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+            </div>
+        </div>
     </div>
 
 </body>
