--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="box">
             <h2> CATEGORIE :</h2>
-            <button class=" sport">
+            <button class=" sport"a href="quizz.html">
 
                 <a href="quizz.html">Sport</a>
                 
