--- a/music.html
+++ b/music.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="quizz.css">
+    <link rel="stylesheet" href="music.css">
    
   
 </head>
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="box">
             <h2> SOUS CATEGORIE :</h2>
-            <button class = rap>
+            <button class = rap >
 
                 <a href=>RAP</a>
                 
