--- a/inscription.html
+++ b/inscription.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
     <link rel="icon" href="https://img.icons8.com/sf-black/64/000000/search.png">
+    <link rel="stylesheet" href="inscription.css">
+    <script src="script.js"></script>
+    <link href='https://css.gg/search.css' rel='stylesheet'>
     <title>Quizzeo</title>
 </head>
 
@@ -15,10 +17,10 @@
         <h1><a href="home.html">Quiz<span>zeo.</span></a></h1>
         <div class="options">
             <a href="login.html">Connexion</a>
-            <button><a href="inscription.html">Inscription</a></button>
+            <button><a href="login.html">Inscription</a></button>
         </div>
     </header>
-    
+
     <div class="container">
         <h2 id="slogan">Rejoignez la communauté de quizz en ligne pour tester vos connaissances !</h2>
         <div class="loginPage">
@@ -26,33 +28,21 @@
                 <h2>Quiz<span>zeo.</span></h2>
             </div>
             <div class="login">
-                <h2>Connexion</h2>
+                <h2>Créer un compte</h2>
                 <form method="post" action="script.php">
-                    <input type="text" name="pseudo" placeholder="Nom d'utilisateur" id="pseudo">
-                    <input type="email" name="email" placeholder="E-mail" id="pseudo">
-                    <input type="password" name="password" placeholder="Mot de passe" id="password">
+                    <input type="text" name="pseudo" placeholder="Nom d'utilisateur" id="pseudo" required>
+                    <input type="email" name="email" placeholder="E-mail" id="pseudo" required>
+                    <input type="password" name="password" placeholder="Mot de passe" id="password" required>
+                    <input type="password" name="password" placeholder="Confirmer le mot de passe" id="password" required>
                     <select name="role" id="card">
                         <option value="2">Utilisateur</option>
                         <option value="3">Quizzeur</option>
                     </select>
-                    <input class="submit" type="submit" value="Se connecter">
-                    <div class="other">
-                        <a href="inscription.html">Pas encore inscrit ?</a>
-                        <span>Créer un compte</span>
-                        <a href="inscription.html">Mot de passe oublié ?</a>
-                    </div>
+                    <input class="submit" type="submit" value="Continuer">
                 </form>
             </div>
         </div>
     </div>
-    <!-- <footer>
-        <ul>
-            <li><a href="#">À propos</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Conditions d'utilisation</a></li>
-        </ul>
-        <p>&copy; Quizzeo 2023</p>
-    </footer> -->
 </body>
 
 </html>
