--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
     </header>
 
     <div class="search">
-        <h2>Mettez vos connaissances à l'épreuve en jouant ou en créant des quizz captivants !</h2>
+        <h2>Mettez vos connaissances à l'épreuve en jouant ou en créant des quizz captivants</h2>
         <input class="searchBar" type="search" placeholder="Rechercher">
     </div>
 
