--- a/inscription.html
+++ b/inscription.html
@@ -34,7 +34,7 @@
                     <input type="email" name="email" placeholder="E-mail" id="pseudo" required>
                     <input type="password" name="password" placeholder="Mot de passe" id="password" required>
                     <input type="password" name="password" placeholder="Confirmer le mot de passe" id="password" required>
-                    <select name="role" id="card">
+                    <select name="role" id="role">
                         <option value="2">Utilisateur</option>
                         <option value="3">Quizzeur</option>
                     </select>
