--- a/inscription.html
+++ b/inscription.html
@@ -22,7 +22,9 @@
     </header>
 
     <div class="container">
-        <h2 id="slogan">Rejoignez la communauté de quizz en ligne pour tester vos connaissances !</h2>
+        <div class="slogan">
+            <h2>Rejoignez la communauté de quizz en ligne pour tester vos connaissances !</h2>
+        </div>
         <div class="loginPage">
             <div class="imgLogin">
                 <h2>Quiz<span>zeo.</span></h2>
