--- a/panel.html
+++ b/panel.html
@@ -29,7 +29,7 @@
         <div class="info">
             <h3>Tableau de bord</h3>
         </div>
-        <div class="categories">
+        <div id="categories">
             <div class="imgCategorie">
                 <img class="trash" src="https://cdn-icons-png.flaticon.com/512/7641/7641678.png" alt="Supprimer">
                 <img class="edit" src="https://img.icons8.com/external-febrian-hidayat-flat-febrian-hidayat/256/external-Edit-user-interface-febrian-hidayat-flat-febrian-hidayat.png" alt="Modifier">
@@ -73,23 +73,33 @@
                 <img class="Illustration" src="https://cdn-icons-png.flaticon.com/512/385/385102.png">
             </div>
             <div class="imgCategorie">
+                <img class="trash" src="https://cdn-icons-png.flaticon.com/512/7641/7641678.png" alt="Supprimer">
+                <img class="edit" src="https://img.icons8.com/external-febrian-hidayat-flat-febrian-hidayat/256/external-Edit-user-interface-febrian-hidayat-flat-febrian-hidayat.png" alt="Modifier">
                 <h3 id="Name">Quizz n°8</h3>
                 <img class="Illustration" src="https://cdn-icons-png.flaticon.com/512/4264/4264838.png" alt="Célébrité">
             </div>
             <div class="imgCategorie">
+                <img class="trash" src="https://cdn-icons-png.flaticon.com/512/7641/7641678.png" alt="Supprimer">
+                <img class="edit" src="https://img.icons8.com/external-febrian-hidayat-flat-febrian-hidayat/256/external-Edit-user-interface-febrian-hidayat-flat-febrian-hidayat.png" alt="Modifier">
                 <h3 id="Name">Quizz n°9</h3>
                 <img class="Illustration" src="https://cdn-icons-png.flaticon.com/512/2784/2784623.png" alt="Arts">
             </div>
             <div class="imgCategorie">
+                <img class="trash" src="https://cdn-icons-png.flaticon.com/512/7641/7641678.png" alt="Supprimer">
+                <img class="edit" src="https://img.icons8.com/external-febrian-hidayat-flat-febrian-hidayat/256/external-Edit-user-interface-febrian-hidayat-flat-febrian-hidayat.png" alt="Modifier">
                 <h3 id="Name">Quizz n°10</h3>
                 <img class="Illustration" src="https://cdn-icons-png.flaticon.com/512/9280/9280745.png" alt="Musique">
             </div>
             <div class="imgCategorie">
+                <img class="trash" src="https://cdn-icons-png.flaticon.com/512/7641/7641678.png" alt="Supprimer">
+                <img class="edit" src="https://img.icons8.com/external-febrian-hidayat-flat-febrian-hidayat/256/external-Edit-user-interface-febrian-hidayat-flat-febrian-hidayat.png" alt="Modifier">
                 <h3 id="Name">Quizz n°11</h3>
                 <img class="Illustration" src="https://cdn-icons-png.flaticon.com/512/9626/9626676.png"
                     alt="Culture générale">
             </div>
             <div class="imgCategorie">
+                <img class="trash" src="https://cdn-icons-png.flaticon.com/512/7641/7641678.png" alt="Supprimer">
+                <img class="edit" src="https://img.icons8.com/external-febrian-hidayat-flat-febrian-hidayat/256/external-Edit-user-interface-febrian-hidayat-flat-febrian-hidayat.png" alt="Modifier">
                 <h3 id="Name">Quizz n°12</h3>
                 <img class="Illustration" src="https://cdn-icons-png.flaticon.com/512/2586/2586386.png" alt="Drapeau">
             </div>
