--- a/panel.html
+++ b/panel.html
@@ -26,6 +26,10 @@
         </div>
     </header>
     <div class="container">
+        <section id="popup1">
+            <h2>My popup 1</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        </section>
         <div class="info">
             <h3>Tableau de bord</h3>
         </div>
