--- a/panel.html
+++ b/panel.html
@@ -19,17 +19,13 @@
         <div class="options">
             <h2>Utilisateur</h2>
             <a class="profile" href="panel.html">
-                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Photo de profile">
+                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Photo de profil">
                 <input type="file" id="file-input" style="display: none;">
             </a>
-            <img id="deconnexion" src="https://img.icons8.com/ios/256/exit.png" alt="">
+            <img id="deconnexion" src="https://img.icons8.com/fluency-systems-regular/256/login-rounded-right.png" alt="Se déconnecter">
         </div>
     </header>
     <div class="container">
-        <section id="popup1">
-            <h2>My popup 1</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        </section>
         <div class="info">
             <h3>Tableau de bord</h3>
         </div>
@@ -108,7 +104,7 @@
                 <img class="Illustration" src="https://cdn-icons-png.flaticon.com/512/2586/2586386.png" alt="Drapeau">
             </div>
             <div class="imgCategorie">
-                <h3>+</h3>
+                <a href="quizz.html">+</a>
             </div>
         </div>
     </div>
