--- a/inscription2.html
+++ b/inscription2.html
@@ -44,14 +44,14 @@
             <div class="imgLogin">
                 <h2>Compte</h2>
             </div>
-            <form method="post" action="script.php">
+            <form method="post" action="inscription2.php">
                 <input type="text" name="pseudo" placeholder="Nom d'utilisateur" id="pseudo" required>
-                <input type="email" name="email" placeholder="E-mail" id="pseudo" required>
+                <input type="email" name="email" placeholder="E-mail" id="email" required>
                 <input type="password" name="password" placeholder="Mot de passe" id="password" required>
-                <input type="password" name="password" placeholder="Confirmer le mot de passe" id="password" required>
+                <input type="password" name="password2" placeholder="Confirmer le mot de passe" id="password2" required>
                 <select name="role" id="role">
-                    <option value="2">Utilisateur</option>
-                    <option value="3">Quizzeur</option>
+                    <option value="1">Utilisateur</option>
+                    <option value="2">Quizzeur</option>
                 </select>
                 <input class="submit" type="submit" value="Continuer">
                 <div class="other">
