--- a/login2.html
+++ b/login2.html
@@ -45,7 +45,7 @@
                 <h2>Connexion</h2>
             </div>
             <div class="login">
-                <form method="post" action="script.php">
+                <form method="post" action="login2.php">
                     <input type="text" name="pseudo" placeholder="Nom d'utilisateur" id="pseudo" required>
                     <input type="email" name="email" placeholder="E-mail" id="pseudo" required>
                     <input type="password" name="password" placeholder="Mot de passe" id="password" required>
