--- a/admin2.html
+++ b/admin2.html
@@ -19,7 +19,7 @@
             <span>Quiz</span><span>zeo.</span>
         </a>
         <div class="options">
-            <h2>Utilisateur</h2>
+            <h2>Administrateur</h2>
             <a class="profile" href="panel.html">
                 <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Photo de profile">
                 <input type="file" id="file-input" style="display: none;">
