--- a/accueil.html
+++ b/accueil.html
@@ -46,10 +46,10 @@
                 <p>Rejoignez-nous pour en apprendre toujours un peu plus chaque jour</p>
                 <div class="options2">
                     <div class="inscription2">
-                        <a href="inscription2.html">Inscription</a>
+                        <a href="inscription.html">Inscription</a>
                     </div>
                     <div class="connexion2">
-                        <a href="login2.html">Connexion</a>
+                        <a href="login.html">Connexion</a>
                     </div>
                 </div>
             </div>
