--- a/home.html
+++ b/home.html
@@ -7,100 +7,108 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://img.icons8.com/sf-black/64/000000/search.png">
     <link rel="stylesheet" href="home.css">
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+        integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <link href='https://css.gg/search.css' rel='stylesheet'>
     <title>Quizzeo</title>
 </head>
 
 <body>
     <header>
-        <h1><a href="home.html">Quiz<span>zeo.</span></a></h1>
+        <a class="home" href="home.html">
+            <span>Quiz</span><span>zeo.</span>
+        </a>
         <div class="options">
-            <a href="login.html">Connexion</a>
-            <button><a href="inscription.html">Inscription</a></button>
-            <a class="profile" href="panel.html">
-                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Photo de profile">
+            <h2>Utilisateur</h2>
+            <a id="profil" href="dashboard.html">
+                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Photo de profil">
+            </a>
+            <a id="deconnexion" href="accueil.html">
+                <img src="https://img.icons8.com/fluency-systems-regular/256/login-rounded-right.png"
+                    alt="Se déconnecter">
             </a>
         </div>
     </header>
-
-    <div class="search">
-        <h2>Mettez vos connaissances à l'épreuve en jouant ou en créant des quizz captivants</h2>
-        <input class="searchBar" type="search" placeholder="Rechercher">
-    </div>
-
-    <div class="CategorieChoice">
-        <button>Nouveau</button>
-        <button>Populaire</button>
-        <button>Tout</button>
-    </div>
-
     <div class="container">
-        <div class="categories">
-            <div class="imgCategorie">
-                <h3 id="Name">Sport</h3>
-                <img src="https://cdn-icons-png.flaticon.com/512/536/536074.png" alt="Sport">
-            </div>
-            <div class="imgCategorie">
-                <h3 id="Name">Cinéma</h3>
-                <img src="https://cdn-icons-png.flaticon.com/512/8853/8853905.png" alt="Cinéma">
-            </div>
-            <div class="imgCategorie">
-                <h3 id="Name">Géographie</h3>
-                <img src="https://cdn-icons-png.flaticon.com/512/1243/1243420.png" alt="Géographie">
-            </div>
-            <div class="imgCategorie">
-                <h3 id="Name">Animal</h3>
-                <img src="https://cdn-icons-png.flaticon.com/512/3969/3969722.png" alt="Animal">
-            </div>
-            <div class="imgCategorie">
-                <h3 id="Name">Maths</h3>
-                <img src="https://cdn-icons-png.flaticon.com/512/3655/3655618.png" alt="Maths">
-            </div>
-            <div class="imgCategorie">
-                <h3 id="Name">Vocabulaire</h3>
-                <img src="https://cdn-icons-png.flaticon.com/512/5494/5494482.png" alt="Vocabulaire">
-            </div>
-            <div class="imgCategorie">
-                <h3 id="Name">Nourriture</h3>
-                <img src="https://cdn-icons-png.flaticon.com/512/385/385102.png" alt="Nourriture">
-            </div>
-            <div class="imgCategorie">
-                <h3 id="Name">Célébrité</h3>
-                <img src="https://cdn-icons-png.flaticon.com/512/4264/4264838.png" alt="Célébrité">
-            </div>
-            <div class="imgCategorie">
-                <h3 id="Name">Arts</h3>
-                <img src="https://cdn-icons-png.flaticon.com/512/2784/2784623.png" alt="Arts">
-            </div>
-            <div class="imgCategorie">
-                <h3 id="Name">Musique</h3>
-                <img src="https://cdn-icons-png.flaticon.com/512/9280/9280745.png" alt="Musique">
-            </div>
-            <div class="imgCategorie">
-                <h3 id="Name">Culture générale</h3>
-                <img src="https://cdn-icons-png.flaticon.com/512/9626/9626676.png" alt="Culture générale">
-            </div>
-            <div class="imgCategorie">
-                <h3 id="Name">Drapeau</h3>
-                <img src="https://cdn-icons-png.flaticon.com/512/2586/2586386.png" alt="Drapeau">
-            </div>
-            <div class="textCategorie">
-                <h3>Titre</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+        <!-- <div class="icons">
+            <img src="https://cdn-icons-png.flaticon.com/512/4218/4218113.png" alt="Ballon de basket">
+            <img src="https://cdn-icons-png.flaticon.com/512/4218/4218472.png" alt="Lettres">
+            <img src="https://cdn-icons-png.flaticon.com/512/4218/4218484.png" alt="Globe terrestre">
+            <img src="https://cdn-icons-png.flaticon.com/512/4058/4058331.png" alt="Fruit">
+            <img src="https://cdn-icons-png.flaticon.com/512/5204/5204758.png" alt="Crayon">
+            <img src="https://cdn-icons-png.flaticon.com/512/4218/4218478.png" alt="Couleurs">
+            <img src="https://cdn-icons-png.flaticon.com/512/4218/4218493.png" alt="Loupe">
+        </div> -->
+        <div class="search">
+            <h2>Mettez vos connaissances à l'épreuve en jouant ou en créant des quizz</h2>
+            <div class="search-container2">
+                <div id="search-icon">
+                    <img src="https://img.icons8.com/fluency-systems-regular/256/search.png" alt="Rechercher">
+                </div>
+                <input id="search-box" class="searchBar" type="search" placeholder="Rechercher">
             </div>
         </div>
+        <div class="categories">
+            <a href="quiz.html" class="imgCategorie" data-category="Sport">
+                <h3 class="Name">Sport</h3>
+                <img src="https://cdn-icons-png.flaticon.com/512/4218/4218113.png" alt="Sport">
+            </a>
+            <a href="quiz.html" class="imgCategorie" data-category="Cinéma">
+                <h3 class="Name">Cinéma</h3>
+                <img src="https://cdn-icons-png.flaticon.com/512/5198/5198228.png" alt="Cinéma">
+            </a>
+            <a href="quiz.html" class="imgCategorie" data-category="Géographie">
+                <h3 class="Name">Géographie</h3>
+                <img src="https://cdn-icons-png.flaticon.com/512/4218/4218484.png" alt="Géographie">
+            </a>
+            <a href="quiz.html" class="imgCategorie" data-category="Animal">
+                <h3 class="Name">Animal</h3>
+                <img src="https://cdn-icons-png.flaticon.com/512/8176/8176142.png" alt="Animal">
+            </a>
+            <a href="quiz.html" class="imgCategorie" data-category="Maths">
+                <h3 class="Name">Maths</h3>
+                <img src="https://cdn-icons-png.flaticon.com/512/5197/5197954.png" alt="Maths">
+            </a>
+            <a href="quiz.html" class="imgCategorie" data-category="Vocabulaire">
+                <h3 class="Name">Vocabulaire</h3>
+                <img src="https://cdn-icons-png.flaticon.com/512/4218/4218472.png" alt="Vocabulaire">
+            </a>
+            <a href="quiz.html" class="imgCategorie" data-category="Gastronomie">
+                <h3 class="Name">Gastronomie</h3>
+                <img src="https://cdn-icons-png.flaticon.com/512/4058/4058331.png" alt="Gastronomie">
+            </a>
+            <a href="quiz.html" class="imgCategorie" data-category="Célébrité">
+                <h3 class="Name">Célébrité</h3>
+                <img src="https://cdn-icons-png.flaticon.com/512/5197/5197853.png" alt="Célébrité">
+            </a>
+            <a href="quiz.html" class="imgCategorie" data-category="Arts">
+                <h3 class="Name">Arts</h3>
+                <img src="https://cdn-icons-png.flaticon.com/512/4218/4218478.png" alt="Arts">
+            </a>
+            <a href="quiz.html" class="imgCategorie" data-category="Musique">
+                <h3 class="Name">Musique</h3>
+                <img src="https://cdn-icons-png.flaticon.com/512/5198/5198104.png" alt="Musique">
+            </a>
+            <a href="quiz.html" class="imgCategorie" data-category="Culture">
+                <h3 class="Name">Culture</h3>
+                <img src="https://cdn-icons-png.flaticon.com/512/3962/3962505.png" alt="Culture">
+            </a>
+            <a href="quiz.html" class="imgCategorie" data-category="Espace">
+                <h3 class="Name">Espace</h3>
+                <img src="https://cdn-icons-png.flaticon.com/512/4663/4663555.png" alt="Espace">
+            </a>
+        </div>
     </div>
-
-    <footer>
+    <!-- <footer>
         <ul>
             <li><a href="#">À propos</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Conditions d'utilisation</a></li>
         </ul>
         <p>&copy; Quizzeo 2023</p>
-    </footer>
+    </footer> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
