--- a/inscription.html
+++ b/inscription.html
@@ -7,44 +7,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://img.icons8.com/sf-black/64/000000/search.png">
     <link rel="stylesheet" href="inscription.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+        integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <link href='https://css.gg/search.css' rel='stylesheet'>
     <title>Quizzeo</title>
 </head>
 
 <body>
     <header>
-        <h1><a href="home.html">Quiz<span>zeo.</span></a></h1>
-        <div class="options">
-            <a href="login.html">Connexion</a>
-            <button><a href="login.html">Inscription</a></button>
-        </div>
+        <a class="home" href="accueil.html">
+            <span>Quiz</span><span>zeo.</span>
+        </a>
+        <!-- <div class="options">
+            <div id="connexion">
+                <a class="button" href="login.html">Connexion</a>
+            </div>
+            <div class="inscription">
+                <a href="inscription.html">Inscription</a>
+            </div>
+            <a id="profile" href="panel.html">
+                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Photo de profile">
+            </a>
+        </div> -->
     </header>
-
     <div class="container">
-        <div class="slogan">
-            <h2>Rejoignez la communauté de quizz en ligne pour tester vos connaissances !</h2>
+        <div class="icons">
+            <img src="https://cdn-icons-png.flaticon.com/512/4218/4218472.png" alt="Lettres">
+            <img src="https://cdn-icons-png.flaticon.com/512/4058/4058331.png" alt="Fruit">
+            <img src="https://cdn-icons-png.flaticon.com/512/4218/4218113.png" alt="Ballon de basket">
+            <img src="https://cdn-icons-png.flaticon.com/512/4218/4218478.png" alt="Couleurs">
+            <img src="https://cdn-icons-png.flaticon.com/512/5204/5204758.png" alt="Crayon">
+            <img src="https://cdn-icons-png.flaticon.com/512/4218/4218493.png" alt="Loupe">
+            <img src="https://cdn-icons-png.flaticon.com/512/4218/4218484.png" alt="Globe terrestre">
         </div>
-        <div class="loginPage">
+        <div class="container-login">
             <div class="imgLogin">
-                <h2>Quiz<span>zeo.</span></h2>
+                <h2>Compte</h2>
             </div>
-            <div class="login">
-                <h2>Créer un compte</h2>
-                <form method="post" action="script.php">
-                    <input type="text" name="pseudo" placeholder="Nom d'utilisateur" id="pseudo" required>
-                    <input type="email" name="email" placeholder="E-mail" id="pseudo" required>
-                    <input type="password" name="password" placeholder="Mot de passe" id="password" required>
-                    <input type="password" name="password" placeholder="Confirmer le mot de passe" id="password" required>
-                    <select name="role" id="role">
-                        <option value="2">Utilisateur</option>
-                        <option value="3">Quizzeur</option>
-                    </select>
-                    <input class="submit" type="submit" value="Continuer">
-                </form>
-            </div>
+            <form method="post" action="script.php">
+                <input type="text" name="pseudo" placeholder="Nom d'utilisateur" id="pseudo" required>
+                <input type="email" name="email" placeholder="E-mail" id="pseudo" required>
+                <input type="password" name="password" placeholder="Mot de passe" id="password" required>
+                <input type="password" name="password2" placeholder="Confirmer le mot de passe" id="password" required>
+                <select name="role" id="role">
+                    <option value="2">Utilisateur</option>
+                    <option value="3">Quizzeur</option>
+                </select>
+                <input class="submit" type="submit" value="Continuer">
+                <div class="other">
+                    <div>
+                        <span>Tu as déjà un compte ?</span>
+                        <a href="login.html">Se connecter</a>
+                    </div>
+                    <!-- <a href="#">Mot de passe oublié ?</a> -->
+                </div>
+            </form>
         </div>
     </div>
+    <!-- <footer>
+        <ul>
+            <li><a href="#">À propos</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Conditions d'utilisation</a></li>
+        </ul>
+        <p>&copy; Quizzeo 2023</p>
+    </footer> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
