--- a/login.html
+++ b/login.html
@@ -5,39 +5,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
     <link rel="icon" href="https://img.icons8.com/sf-black/64/000000/search.png">
+    <link rel="stylesheet" href="inscription.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+        integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+    <link href='https://css.gg/search.css' rel='stylesheet'>
     <title>Quizzeo</title>
 </head>
 
 <body>
     <header>
-        <h1><a href="home.html">Quiz<span>zeo.</span></a></h1>
-        <div class="options">
-            <a href="login.html">Connexion</a>
-            <button><a href="inscription.html">Inscription</a></button>
-        </div>
+        <a class="home" href="accueil.html">
+            <span>Quiz</span><span>zeo.</span>
+        </a>
+        <!-- <div class="options">
+            <div id="connexion">
+                <a class="button" href="login.html">Connexion</a>
+            </div>
+            <div class="inscription">
+                <a href="inscription.html">Inscription</a>
+            </div>
+            <a id="profile" href="panel.html">
+                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Photo de profile">
+            </a>
+        </div> -->
     </header>
-    
     <div class="container">
-        <div class="slogan">
-            <h2>Rejoignez la communauté de quizz en ligne pour tester vos connaissances !</h2>
+        <div class="icons opacity">
+            <img src="https://cdn-icons-png.flaticon.com/512/4218/4218472.png" alt="Lettres">
+            <img src="https://cdn-icons-png.flaticon.com/512/4058/4058331.png" alt="Fruit">
+            <img src="https://cdn-icons-png.flaticon.com/512/4218/4218113.png" alt="Ballon de basket">
+            <img src="https://cdn-icons-png.flaticon.com/512/4218/4218478.png" alt="Couleurs">
+            <img src="https://cdn-icons-png.flaticon.com/512/5204/5204758.png" alt="Crayon">
+            <img src="https://cdn-icons-png.flaticon.com/512/4218/4218493.png" alt="Loupe">
+            <img src="https://cdn-icons-png.flaticon.com/512/4218/4218484.png" alt="Globe terrestre">
         </div>
-        <div class="loginPage">
+        <div class="container-login">
             <div class="imgLogin">
-                <h2>Quiz<span>zeo.</span></h2>
+                <h2>Connexion</h2>
             </div>
             <div class="login">
-                <h2>Connexion</h2>
                 <form method="post" action="script.php">
                     <input type="text" name="pseudo" placeholder="Nom d'utilisateur" id="pseudo" required>
                     <input type="email" name="email" placeholder="E-mail" id="pseudo" required>
                     <input type="password" name="password" placeholder="Mot de passe" id="password" required>
                     <input class="submit" type="submit" value="Se connecter">
                     <div class="other">
-                        <a href="inscription.html">Pas encore inscrit ?</a>
-                        <span>Créer un compte</span>
-                        <a href="inscription.html">Mot de passe oublié ?</a>
+                        <div>
+                            <span>Pas encore inscrit ?</span>
+                            <a href="inscription.html">Créer un compte</a>
+                        </div>
+                        <!-- <a href="#">Mot de passe oublié ?</a> -->
                     </div>
                 </form>
             </div>
@@ -51,6 +69,8 @@
         </ul>
         <p>&copy; Quizzeo 2023</p>
     </footer> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
