--- a/create2.html
+++ b/create2.html
@@ -5,21 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="create.css">
+    <link rel="icon" href="https://img.icons8.com/sf-black/64/000000/search.png">
+    <link rel="stylesheet" href="create2.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+        integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <title>Quizzeo</title>
 </head>
 
 <body>
     <header>
-        <h1><a href="home.html">Quiz<span>zeo.</span></a></h1>
+        <a class="home" href="home.html">
+            <span>Quiz</span><span>zeo.</span>
+        </a>
         <div class="options">
             <h2>Utilisateur</h2>
-            <a class="profile" href="panel.html">
-                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Photo de profile">
-                <input type="file" id="file-input" style="display: none;">
+            <a id="profil" href="dashboard.html">
+                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Photo de profil">
             </a>
-            <img id="deconnexion" src="https://img.icons8.com/fluency-systems-regular/256/login-rounded-right.png"
-                alt="Se déconnecter">
+            <a id="deconnexion" href="accueil.html">
+                <img src="https://img.icons8.com/fluency-systems-regular/256/login-rounded-right.png"
+                    alt="Se déconnecter">
+            </a>
         </div>
     </header>
     <div class="container">
@@ -79,15 +85,14 @@
             </form>
         </div>
     </div>
-
-    <footer>
+    <!-- <footer>
         <ul>
             <li><a href="#">À propos</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Conditions d'utilisation</a></li>
         </ul>
         <p>&copy; Quizzeo 2023</p>
-    </footer>
+    </footer> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
