--- a/inscription.html
+++ b/inscription.html
@@ -44,7 +44,7 @@
             <div class="imgLogin">
                 <h2>Compte</h2>
             </div>
-            <form method="post" action="script.php">
+            <form method="post" action="inscription.php">
                 <input type="text" name="pseudo" placeholder="Nom d'utilisateur" id="pseudo" required>
                 <input type="email" name="email" placeholder="E-mail" id="pseudo" required>
                 <input type="password" name="password" placeholder="Mot de passe" id="password" required>
