--- a/creation.html
+++ b/creation.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://img.icons8.com/sf-black/64/000000/search.png">
-    <link rel="stylesheet" href="create2.css">
+    <link rel="stylesheet" href="creation.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
         integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <title>Quizzeo</title>
@@ -14,17 +14,13 @@
 
 <body>
     <header>
-        <a class="home" href="home.html">
+        <a class="home" href="home.php">
             <span>Quiz</span><span>zeo.</span>
         </a>
         <div class="options">
             <h2>Utilisateur</h2>
-            <a id="profil" href="dashboard.html">
+            <a id="profil" href="dashboard.php">
                 <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Photo de profil">
-            </a>
-            <a id="deconnexion" href="accueil.html">
-                <img src="https://img.icons8.com/fluency-systems-regular/256/login-rounded-right.png"
-                    alt="Se déconnecter">
             </a>
         </div>
     </header>
