--- a/creation.html
+++ b/creation.html
@@ -30,10 +30,10 @@
                 <h3>Création de quiz</h3>
                 <img src="https://img.icons8.com/color/256/add-folder.png">
             </div>
-            <input type="text" placeholder="Titre">
         </div>
         <div id="pageCreate">
             <form action="test.php" method="post">
+                <input id="input-title" type="text" placeholder="Titre">
                 <div class="container-question">
                     <div class="question">
                         <div class="number">
