--- a/creation.html
+++ b/creation.html
@@ -81,19 +81,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="question add">+</div>
+                <!-- <div class="question add">+</div> -->
                 <input id="button-submit" type="submit" value="Créer">
             </form>
         </div>
     </div>
-    <!-- <footer>
-        <ul>
-            <li><a href="#">À propos</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Conditions d'utilisation</a></li>
-        </ul>
-        <p>&copy; Quizzeo 2023</p>
-    </footer> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
