--- a/creation.html
+++ b/creation.html
@@ -32,7 +32,8 @@
         <div id="pageCreate">
             <form action="test.php" method="post">
                 <div class="info-container">
-                    <input class="input-quiz" type="text" placeholder="Titre" maxlength="20" required oninvalid="this.style.border='2px solid #ff5f45';">
+                    <input class="input-quiz" type="text" placeholder="Titre" maxlength="20" required
+                        oninvalid="this.style.border='2px solid #ff5f45';">
                     <h2>Difficulté</h2>
                     <select name="role" class="input-quiz difficulty" placeholder="aze" required>
                         <option value="1">1</option>
@@ -47,8 +48,6 @@
                         </div>
                         <!-- <h3>Question</h3> -->
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
-                        <img class="trash" src="https://cdn-icons-png.flaticon.com/512/7641/7641678.png"
-                            alt="Supprimer">
                     </div>
                     <div class="container-answer">
                         <div class="answer">
@@ -89,8 +88,6 @@
                         </div>
                         <!-- <h3>Question</h3> -->
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
-                        <img class="trash" src="https://cdn-icons-png.flaticon.com/512/7641/7641678.png"
-                            alt="Supprimer">
                     </div>
                     <div class="container-answer">
                         <div class="answer">
@@ -131,8 +128,6 @@
                         </div>
                         <!-- <h3>Question</h3> -->
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
-                        <img class="trash" src="https://cdn-icons-png.flaticon.com/512/7641/7641678.png"
-                            alt="Supprimer">
                     </div>
                     <div class="container-answer">
                         <div class="answer">
@@ -173,8 +168,6 @@
                         </div>
                         <!-- <h3>Question</h3> -->
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
-                        <img class="trash" src="https://cdn-icons-png.flaticon.com/512/7641/7641678.png"
-                            alt="Supprimer">
                     </div>
                     <div class="container-answer">
                         <div class="answer">
@@ -215,8 +208,6 @@
                         </div>
                         <!-- <h3>Question</h3> -->
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
-                        <img class="trash" src="https://cdn-icons-png.flaticon.com/512/7641/7641678.png"
-                            alt="Supprimer">
                     </div>
                     <div class="container-answer">
                         <div class="answer">
@@ -257,8 +248,6 @@
                         </div>
                         <!-- <h3>Question</h3> -->
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
-                        <img class="trash" src="https://cdn-icons-png.flaticon.com/512/7641/7641678.png"
-                            alt="Supprimer">
                     </div>
                     <div class="container-answer">
                         <div class="answer">
@@ -299,8 +288,6 @@
                         </div>
                         <!-- <h3>Question</h3> -->
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
-                        <img class="trash" src="https://cdn-icons-png.flaticon.com/512/7641/7641678.png"
-                            alt="Supprimer">
                     </div>
                     <div class="container-answer">
                         <div class="answer">
@@ -341,8 +328,6 @@
                         </div>
                         <!-- <h3>Question</h3> -->
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
-                        <img class="trash" src="https://cdn-icons-png.flaticon.com/512/7641/7641678.png"
-                            alt="Supprimer">
                     </div>
                     <div class="container-answer">
                         <div class="answer">
@@ -383,8 +368,6 @@
                         </div>
                         <!-- <h3>Question</h3> -->
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
-                        <img class="trash" src="https://cdn-icons-png.flaticon.com/512/7641/7641678.png"
-                            alt="Supprimer">
                     </div>
                     <div class="container-answer">
                         <div class="answer">
@@ -425,8 +408,6 @@
                         </div>
                         <!-- <h3>Question</h3> -->
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
-                        <img class="trash" src="https://cdn-icons-png.flaticon.com/512/7641/7641678.png"
-                            alt="Supprimer">
                     </div>
                     <div class="container-answer">
                         <div class="answer">
