--- a/creation.html
+++ b/creation.html
@@ -46,7 +46,7 @@
                         <div class="number">
                             <h3>1</h3>
                         </div>
-                        <!-- <h3>Question</h3> -->
+                        <h3>Question</h3>
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
                     </div>
                     <div class="container-answer">
@@ -86,7 +86,7 @@
                         <div class="number">
                             <h3>2</h3>
                         </div>
-                        <!-- <h3>Question</h3> -->
+                        <h3>Question</h3>
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
                     </div>
                     <div class="container-answer">
@@ -126,7 +126,7 @@
                         <div class="number">
                             <h3>3</h3>
                         </div>
-                        <!-- <h3>Question</h3> -->
+                        <h3>Question</h3>
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
                     </div>
                     <div class="container-answer">
@@ -166,7 +166,7 @@
                         <div class="number">
                             <h3>4</h3>
                         </div>
-                        <!-- <h3>Question</h3> -->
+                        <h3>Question</h3>
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
                     </div>
                     <div class="container-answer">
@@ -206,7 +206,7 @@
                         <div class="number">
                             <h3>5</h3>
                         </div>
-                        <!-- <h3>Question</h3> -->
+                        <h3>Question</h3>
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
                     </div>
                     <div class="container-answer">
@@ -246,7 +246,7 @@
                         <div class="number">
                             <h3>6</h3>
                         </div>
-                        <!-- <h3>Question</h3> -->
+                        <h3>Question</h3>
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
                     </div>
                     <div class="container-answer">
@@ -286,7 +286,7 @@
                         <div class="number">
                             <h3>7</h3>
                         </div>
-                        <!-- <h3>Question</h3> -->
+                        <h3>Question</h3>
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
                     </div>
                     <div class="container-answer">
@@ -326,7 +326,7 @@
                         <div class="number">
                             <h3>8</h3>
                         </div>
-                        <!-- <h3>Question</h3> -->
+                        <h3>Question</h3>
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
                     </div>
                     <div class="container-answer">
@@ -366,7 +366,7 @@
                         <div class="number">
                             <h3>9</h3>
                         </div>
-                        <!-- <h3>Question</h3> -->
+                        <h3>Question</h3>
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
                     </div>
                     <div class="container-answer">
@@ -406,7 +406,7 @@
                         <div class="number">
                             <h3>10</h3>
                         </div>
-                        <!-- <h3>Question</h3> -->
+                        <h3>Question</h3>
                         <input type="text" id="textarea" placeholder="Quel est la couleur du cheval blanc de Henri IV ?">
                     </div>
                     <div class="container-answer">
