--- a/creation.html
+++ b/creation.html
@@ -43,6 +43,7 @@
                 </div>
                 <div class="container-question">
                     <div class="question">
+                        <div class="test"></div>
                         <div class="number">
                             <h3>1</h3>
                         </div>
