--- a/inscription.html
+++ b/inscription.html
@@ -43,7 +43,7 @@
                 <div class="other">
                     <div>
                         <span>Tu as déjà un compte ?</span>
-                        <a href="login.html">Se exionecter</a>
+                        <a href="login.html">Se connecter</a>
                     </div>
                 </div>
             </form>
