--- a/accueil.html
+++ b/accueil.html
@@ -35,7 +35,7 @@
                         <a href="inscription.php">Inscription</a>
                     </div>
                     <div class="connexion2">
-                        <a href="login.html">Connexion</a>
+                        <a href="login.php">Connexion</a>
                     </div>
                 </div>
             </div>
